WindGroup Dev/src/objects/Checklist_Master_Item__c.object
<CustomObject>
    <fields>
        <fullName>Checklist_Master__c</fullName>
        <label>Checklist Master</label>
        <referenceTo>Checklist_Master__c</referenceTo>
        <relationshipLabel>Checklist Master Item</relationshipLabel>
        <relationshipName>Checklist_Master_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Checklist_Status__c</fullName>
        <label>Checklist Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FM_SN__c</fullName>
        <formula>ValuE(SN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S/N</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Types__c</fullName>
        <label>Issue Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Item_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Checklist_Issue_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Item_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Checklist Item</label>
        <referenceTo>Checklist_Master_Item__c</referenceTo>
        <relationshipLabel>Checklist Master Item</relationshipLabel>
        <relationshipName>Checklist_Master_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SN__c</fullName>
        <label>S/N</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Checklist Master Item</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-CMI-{000000}</displayFormat>
        <label>CMI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Master Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>